# crosspack-scraper

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
crosspack_scraper/: scraper.py
